fix backdrop-filter on safari

--- a/css/resp.css
+++ b/css/resp.css
@@ -29,7 +29,7 @@
  }
 
  #selectloc {
-  width: 50% !important;
+  width: 80% !important;
  }
 
  #box1 {
