--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ body {
   background: rgba(255, 255, 255, 0.04);
   border-left: 5px solid rgba(255, 255, 255, 0.14);
   backdrop-filter: blur(9.5px);
+  -webkit-backdrop-filter: blur(9.5px);
 }
 
 #headnav {
